fix: file container hide scrollbar

--- a/client/src/components/card-button/file/styles.css
+++ b/client/src/components/card-button/file/styles.css
@@ -30,7 +30,7 @@
 /* Layout */
 .file_container {
   scrollbar-width: 1rem;
-  overflow-y: scroll;
+  overflow-y: auto;
   height: auto;
 }
 
